# htagcli

./: .gitignore  LICENSE  README.md  TODO  cabal.project  flake.nix  hs-tag.cabal  htagcli.cabal  htagcli.nix  setup.sh
.github/workflows/: ci.yml  nix-build.yml  nix.yml
app/: AudioTrack.hs  Check.hs  Commands.hs  ConduitUtils.hs  Config.hs  Main.hs  Options.hs  Progress.hs  Stats.hs  Tag.hs
app/Progress/: Queue.hs
data/: htagcli.toml  musicbrainz-dischord-search.json  musicbrainz-repeater-detail.json  musicbrainz-repeater-search.json
lib/: Album.hs  Artist.hs  AudioTrack.hs  Check.hs  Commands.hs  Config.hs  MusicBrainz.hs  Pattern.hs  SetTagsOptions.hs  Tag.hs
lib/Check/: Album.hs  Artist.hs  Disc.hs  File.hs  Track.hs
lib/Commands/: FileSystem.hs
lib/Data/List/NonEmpty/: Extra.hs
lib/Model/: Album.hs  Artist.hs  AudioTrack.hs  Cover.hs  Disc.hs  Pattern.hs  SetTags.hs  SetTagsOptions.hs  Tag.hs
lib/MusicBrainz/: Average.hs  Req.hs  Similarity.hs  Types.hs
lib/Path/IO/: Extra.hs
lib/Sound/HTagLib/: Extra.hs
lib/Toml/: Extra.hs
tests/: Main.hs
tests/Tests/: AudioTrack.hs  Check.hs  Commands.hs  Common.hs  Config.hs  Example.hs  MusicBrainz.hs  Pattern.hs  Tag.hs
tests/Tests/Check/: Album.hs  Artist.hs  Disc.hs  File.hs  Track.hs
tests/Tests/Model/: Album.hs  Artist.hs  AudioTrack.hs  Disc.hs  Pattern.hs  Tag.hs
tests/Tests/MusicBrainz/: Types.hs
