cabal-version:      2.4
name:               hs-tag
version:            0.1.0.0

license:            LGPL-3.0-or-later
author:             jecaro
maintainer:         jeancharles.quillet@gmail.com

executable hs-tag
    hs-source-dirs:
        app

    main-is:
        Main.hs

    other-modules:
        AudioTrack
        Options

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude

    build-depends:
        base,
        htaglib,
        optparse-applicative,
        path,
        path-io,
        relude,
        text

    default-language: Haskell2010

    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wpartial-fields
      -Wredundant-constraints

   default-extensions:
      OverloadedStrings
      RecordWildCards
      ScopedTypeVariables

