cabal-version: 3.8
name: htagcli
version: 0.1.0.0
license: LGPL-3.0-or-later
author: jecaro
maintainer: jeancharles.quillet@gmail.com

common defaults
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

  default-extensions:
    LambdaCase
    OverloadedStrings
    PackageImports
    RecordWildCards
    StrictData

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude,

  build-depends:
    base,
    relude,

library
  import:
    defaults

  hs-source-dirs:
    lib

  exposed-modules:
    AudioTrack
    Check
    Data.List.NonEmpty.Extra
    Pattern
    Sound.HTagLib.Extra
    Tag

  build-depends:
    filepath,
    htaglib,
    megaparsec,
    parser-combinators,
    path,

executable htagcli
  import:
    defaults

  hs-source-dirs:
    app

  main-is:
    Main.hs

  other-modules:
    Commands
    Config
    Options
    Toml.Extra

  build-depends:
    conduit,
    htagcli,
    htaglib,
    megaparsec,
    optparse-applicative,
    path,
    path-io,
    text,
    tomland,
    unliftio,
    validation-selective,

test-suite tests
  import:
    defaults

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    tests

  main-is:
    Main.hs

  other-modules:
    Tests.Check
    Tests.Pattern
    Tests.Tag

  ghc-options:
    -F
    -pgmF=tasty-autocollect

  build-depends:
    hedgehog,
    hspec-expectations,
    hspec-megaparsec,
    htagcli,
    htaglib,
    megaparsec,
    parser-combinators,
    path,
    tasty,
    tasty-autocollect,
    tasty-hedgehog,
    tasty-hunit-compat,
