cabal-version: 3.8
name: htagcli
version: 0.1.0.0
license: MIT
author: jecaro
maintainer: jeancharles.quillet@gmail.com

common defaults
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

  default-extensions:
    LambdaCase
    OverloadedStrings
    PackageImports
    RecordWildCards
    StrictData

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude,

  build-depends:
    base,
    relude,

library
  import:
    defaults

  hs-source-dirs:
    lib

  exposed-modules:
    Check.Album
    Check.Artist
    Check.Track
    Commands
    Config
    Data.List.NonEmpty.Extra
    Model.Album
    Model.Artist
    Model.AudioTrack
    Model.Cover
    Model.Pattern
    Model.SetTagsOptions
    Model.Tag
    Path.IO.Extra
    Sound.HTagLib.Extra
    Toml.Extra

  build-depends:
    JuicyPixels,
    extra,
    file-embed,
    filepath,
    htaglib,
    megaparsec,
    parser-combinators,
    path,
    path-io,
    tomland,
    transformers,
    unliftio,
    validation-selective,

executable htagcli
  import:
    defaults

  hs-source-dirs:
    app

  main-is:
    Main.hs

  other-modules:
    ConduitUtils
    Options
    Progress
    Progress.Queue
    Stats

  build-depends:
    ansi-terminal,
    conduit,
    extra,
    htagcli,
    htaglib,
    megaparsec,
    optparse-applicative,
    path,
    path-io,
    text,
    typed-process,
    unliftio,

test-suite tests
  import:
    defaults

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    tests

  main-is:
    Main.hs

  other-modules:
    Tests.Check.Album
    Tests.Check.Artist
    Tests.Check.File
    Tests.Commands
    Tests.Common
    Tests.Config
    Tests.Model.AudioTrack
    Tests.Model.Pattern
    Tests.Model.Tag

  ghc-options:
    -F
    -pgmF=tasty-autocollect

  build-depends:
    hedgehog,
    hspec,
    hspec-expectations,
    hspec-megaparsec,
    htagcli,
    htaglib,
    megaparsec,
    mmorph,
    parser-combinators,
    path,
    path-io,
    resourcet,
    tasty,
    tasty-autocollect,
    tasty-expected-failure,
    tasty-hedgehog,
    tasty-hunit-compat,
    unliftio,
